{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 32,
  "lineage": "107ffd71-4b66-566b-f2db-670cf9bd944f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065efef2c739d613b",
            "arn": "arn:aws:ec2:us-east-1:600913515957:instance/i-0cacb06dfec31780d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cacb06dfec31780d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-042726a83fb37ada7",
            "private_dns": "ip-10-20-20-6.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.20.6",
            "public_dns": "ec2-184-72-80-230.compute-1.amazonaws.com",
            "public_ip": "184.72.80.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bf5360bacde65dfe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d31a2e73f4839c9d",
            "tags": {
              "Name": "app-server-1"
            },
            "tags_all": {
              "Name": "app-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f475fc13c272d936"
            ]
          },
          "dependencies": [
            "aws_security_group.http-sg",
            "aws_subnet.private-2a",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065efef2c739d613b",
            "arn": "arn:aws:ec2:us-east-1:600913515957:instance/i-050048a687ca837de",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-050048a687ca837de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06c34556da9d2e9d9",
            "private_dns": "ip-10-20-20-24.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.20.24",
            "public_dns": "ec2-54-160-201-11.compute-1.amazonaws.com",
            "public_ip": "54.160.201.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0140031fdbb1d0f12",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0212e79ba0de7c530",
            "tags": {
              "Name": "app-server-2"
            },
            "tags_all": {
              "Name": "app-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f475fc13c272d936"
            ]
          },
          "dependencies": [
            "aws_security_group.http-sg",
            "aws_subnet.private-2b",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065efef2c739d613b",
            "arn": "arn:aws:ec2:us-east-1:600913515957:instance/i-00ab21cd7bdb112d8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00ab21cd7bdb112d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-043fc76dc4783683e",
            "private_dns": "ip-10-20-20-42.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.20.42",
            "public_dns": "ec2-35-153-70-214.compute-1.amazonaws.com",
            "public_ip": "35.153.70.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0577385528bd2f8b3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dda1ccaefb07f760",
            "tags": {
              "Name": "app-server-3"
            },
            "tags_all": {
              "Name": "app-server-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f475fc13c272d936"
            ]
          },
          "dependencies": [
            "aws_security_group.http-sg",
            "aws_subnet.private-2c",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600913515957:internet-gateway/igw-0ee9a0a1dc1ae7f1d",
            "id": "igw-0ee9a0a1dc1ae7f1d",
            "owner_id": "600913515957",
            "tags": {
              "Name": "Application-1-gateway"
            },
            "tags_all": {
              "Name": "Application-1-gateway"
            },
            "vpc_id": "vpc-0e1ac3f869d8a1fc0"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:600913515957:loadbalancer/app/front/43c57130e2c18ac3",
            "arn_suffix": "app/front/43c57130e2c18ac3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "front-1332800297.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:600913515957:loadbalancer/app/front/43c57130e2c18ac3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "front",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f475fc13c272d936"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0212e79ba0de7c530"
              },
              {
                "subnet_id": "subnet-0d31a2e73f4839c9d"
              },
              {
                "subnet_id": "subnet-0dda1ccaefb07f760"
              }
            ],
            "subnets": [
              "subnet-0212e79ba0de7c530",
              "subnet-0d31a2e73f4839c9d",
              "subnet-0dda1ccaefb07f760"
            ],
            "tags": {
              "Environment": "front"
            },
            "tags_all": {
              "Environment": "front"
            },
            "vpc_id": "vpc-0e1ac3f869d8a1fc0",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.http-sg",
            "aws_subnet.private-2a",
            "aws_subnet.private-2b",
            "aws_subnet.private-2c",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:600913515957:listener/app/front/43c57130e2c18ac3/26ee5745a9aebb80",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:600913515957:targetgroup/application-front/30ef3faee8817750",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:600913515957:listener/app/front/43c57130e2c18ac3/26ee5745a9aebb80",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:600913515957:loadbalancer/app/front/43c57130e2c18ac3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.front",
            "aws_lb_target_group.front",
            "aws_security_group.http-sg",
            "aws_subnet.private-2a",
            "aws_subnet.private-2b",
            "aws_subnet.private-2c",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:600913515957:targetgroup/application-front/30ef3faee8817750",
            "arn_suffix": "targetgroup/application-front/30ef3faee8817750",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:600913515957:targetgroup/application-front/30ef3faee8817750",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "application-front",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e1ac3f869d8a1fc0"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:600913515957:targetgroup/application-front/30ef3faee8817750-20230118182009539600000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:600913515957:targetgroup/application-front/30ef3faee8817750",
            "target_id": "i-0cacb06dfec31780d"
          },
          "dependencies": [
            "aws_instance.app-server1",
            "aws_lb_target_group.front",
            "aws_security_group.http-sg",
            "aws_subnet.private-2a",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-app2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:600913515957:targetgroup/application-front/30ef3faee8817750-20230118182009297200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:600913515957:targetgroup/application-front/30ef3faee8817750",
            "target_id": "i-050048a687ca837de"
          },
          "dependencies": [
            "aws_instance.app-server2",
            "aws_lb_target_group.front",
            "aws_security_group.http-sg",
            "aws_subnet.private-2b",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-app3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:600913515957:targetgroup/application-front/30ef3faee8817750-20230118182009356800000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:600913515957:targetgroup/application-front/30ef3faee8817750",
            "target_id": "i-00ab21cd7bdb112d8"
          },
          "dependencies": [
            "aws_instance.app-server3",
            "aws_lb_target_group.front",
            "aws_security_group.http-sg",
            "aws_subnet.private-2c",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ee9a0a1dc1ae7f1d",
            "id": "r-rtb-0c857b83638f013bd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c857b83638f013bd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this-igw",
            "aws_route_table.this-rt",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600913515957:route-table/rtb-0c857b83638f013bd",
            "id": "rtb-0c857b83638f013bd",
            "owner_id": "600913515957",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ee9a0a1dc1ae7f1d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Application-1-route-table"
            },
            "tags_all": {
              "Name": "Application-1-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1ac3f869d8a1fc0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06447149274cebdf9",
            "route_table_id": "rtb-0c857b83638f013bd",
            "subnet_id": "subnet-0d31a2e73f4839c9d"
          },
          "dependencies": [
            "aws_route_table.this-rt",
            "aws_subnet.private-2a",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06730a238db53e129",
            "route_table_id": "rtb-0c857b83638f013bd",
            "subnet_id": "subnet-0212e79ba0de7c530"
          },
          "dependencies": [
            "aws_route_table.this-rt",
            "aws_subnet.private-2b",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07707a004fa382b07",
            "route_table_id": "rtb-0c857b83638f013bd",
            "subnet_id": "subnet-0dda1ccaefb07f760"
          },
          "dependencies": [
            "aws_route_table.this-rt",
            "aws_subnet.private-2c",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600913515957:security-group/sg-0f475fc13c272d936",
            "description": "allow inbound http traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f475fc13c272d936",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "from my ip range",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http_access",
            "name_prefix": "",
            "owner_id": "600913515957",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Application-1-sg"
            },
            "tags_all": {
              "Name": "Application-1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1ac3f869d8a1fc0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600913515957:subnet/subnet-0d31a2e73f4839c9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.20.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d31a2e73f4839c9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "600913515957",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application-1-private-2a"
            },
            "tags_all": {
              "Name": "Application-1-private-2a"
            },
            "vpc_id": "vpc-0e1ac3f869d8a1fc0"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600913515957:subnet/subnet-0212e79ba0de7c530",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.20.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0212e79ba0de7c530",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "600913515957",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application-1-private-2b"
            },
            "tags_all": {
              "Name": "Application-1-private-2b"
            },
            "vpc_id": "vpc-0e1ac3f869d8a1fc0"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600913515957:subnet/subnet-0dda1ccaefb07f760",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.20.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dda1ccaefb07f760",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "600913515957",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application-1-private-2c"
            },
            "tags_all": {
              "Name": "Application-1-private-2c"
            },
            "vpc_id": "vpc-0e1ac3f869d8a1fc0"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600913515957:vpc/vpc-0e1ac3f869d8a1fc0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.20.0/26",
            "default_network_acl_id": "acl-0a9a841fc879e5b73",
            "default_route_table_id": "rtb-058031733b2f3da24",
            "default_security_group_id": "sg-0c71673ea87ecf299",
            "dhcp_options_id": "dopt-022324fdf281e7240",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e1ac3f869d8a1fc0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-058031733b2f3da24",
            "owner_id": "600913515957",
            "tags": {
              "Name": "Application-1"
            },
            "tags_all": {
              "Name": "Application-1"
            }
          }
        }
      ]
    }
  ]
}